Fix font contrast issue

--- a/docs/_sass/jekyll-theme-minimal.scss
+++ b/docs/_sass/jekyll-theme-minimal.scss
@@ -47,13 +47,13 @@ a:hover, a:focus {
 
 a small {
   font-size:11px;
-  color:#777;
+  color:#666;
   margin-top:-0.3em;
   display:block;
 }
 
 a:hover small {
-  color:#777;
+  color:#666;
 }
 
 .wrapper {
